--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ebt-vue",
-  "version": "0.5.78",
+  "version": "0.5.79",
   "description": "Vue/Vuetify component library for EBT-Site",
   "main": "index.js",
   "public": true,
@@ -87,7 +87,7 @@
     "Bilara"
   ],
   "author": "Karl Lew",
-  "homepage": "https://github.com/sc-voice/scv-bilara",
+  "homepage": "https://github.com/ebt-site/ebt-vue",
   "license": "MIT",
   "eslintConfig": {
     "root": true,
