--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ebt-vue",
-  "version": "0.5.86",
-  "description": "Vue/Vuetify component library for EBT-Site",
+  "name": "ebt-site",
+  "version": "1.0.0",
+  "description": "Vue/Vuetify website framework for Early Buddhist Texts",
   "main": "index.js",
   "public": true,
   "directories": {
@@ -11,6 +11,7 @@
   "dependencies": {
     "@nuxt/content": "^1.13.1",
     "core-js": "^3.6.5",
+    "ebt-vue": "^0.5.86",
     "nuxt": "^2.14.12",
     "scv-bilara": "^2.1.7",
     "vue-cookie": "^1.1.4",
