--- a/scripts/build
+++ b/scripts/build
@@ -4,14 +4,7 @@ DIR=`dirname $0`
 SCRIPT=`basename $0 | tr abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ`
 cd $DIR/..
 
-type rg >& /dev/null
-RC=$?; if [ "$RC" == "0" ]; then
-  echo -e "$SCRIPT: ripgrep installed (ok)"
-else
-  echo -e "$SCRIPT: installing ripgrep... "
-  curl -LO https://github.com/BurntSushi/ripgrep/releases/download/11.0.2/ripgrep_11.0.2_amd64.deb
-  sudo dpkg -i ripgrep_11.0.2_amd64.deb
-fi
+$DIR/install-ripgrep
 
 ED=local/ebt-data
 if [ -e $ED ]; then
@@ -30,6 +23,6 @@ $DIR/js/build.js
 
 if [ "$1" == "PUSH" ]; then
   $DIR/git-commit-version PUSH &&\
-  $DIR/deploy &&\
   $DIR/publish-npm
 fi
+$DIR/deploy 
