--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ebt-site",
-  "version": "1.0.31",
+  "version": "1.0.32",
   "private": true,
   "description": "Vue/Vuetify website framework for Early Buddhist Texts",
   "scripts": {
@@ -16,43 +16,18 @@
     "version:nuxt": "nuxt --version"
   },
   "dependencies": {
-    "@nuxt/content": "^1.13.1",
-    "core-js": "^3.6.5",
-    "ebt-vue": "^0.6.5",
-    "nuxt": "2.14.12",
-    "scv-bilara": "^2.1.10",
-    "vue-cookie": "^1.1.4",
-    "vue-details": "^1.0.9"
+    "@nuxt/content": "^1.14.0",
+    "@nuxtjs/vuetify": "^1.11.3",
+    "ebt-vue": "^0.7.1",
+    "nuxt": "2.15.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.13",
-    "@babel/preset-env": "^7.12.13",
     "@mdi/js": "^5.8.55",
-    "@nuxtjs/axios": "^5.12.5",
-    "@nuxtjs/vuetify": "^1.11.2",
-    "@rollup/plugin-alias": "^3.1.2",
-    "@rollup/plugin-babel": "^5.2.3",
-    "@rollup/plugin-commonjs": "^17.1.0",
-    "@rollup/plugin-node-resolve": "^11.1.1",
-    "@rollup/plugin-replace": "^2.3.4",
-    "@vue/cli-plugin-babel": "^4.5.11",
-    "@vue/cli-service": "^4.5.11",
-    "@vue/compiler-sfc": "^3.0.5",
-    "axios": "^0.21.1",
-    "cross-env": "^7.0.3",
-    "eslint-plugin-html": "^4.0.5",
-    "fibers": "^5.0.0",
     "memo-again": "^0.3.12",
-    "minimist": "^1.2.5",
     "mocha": "^7.1.1",
     "push-dir": "^0.4.1",
-    "rollup": "^2.38.5",
-    "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-vue": "^6.0.0",
-    "sass-loader": "^8",
-    "should": "^11.2.0",
-    "vue": "^2.6.12",
-    "vue-template-compiler": "^2.6.12"
+    "sass-loader": "^10.1.1",
+    "should": "^11.2.0"
   },
   "author": "Karl Lew",
   "homepage": "https://github.com/ebt-site/ebt-site",
