--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ebt-site",
-  "version": "1.0.32",
+  "version": "1.0.33",
   "private": true,
   "description": "Vue/Vuetify website framework for Early Buddhist Texts",
   "scripts": {
@@ -18,7 +18,7 @@
   "dependencies": {
     "@nuxt/content": "^1.14.0",
     "@nuxtjs/vuetify": "^1.11.3",
-    "ebt-vue": "^0.7.1",
+    "ebt-vue": "^0.7.2",
     "nuxt": "2.15.3"
   },
   "devDependencies": {
@@ -27,6 +27,7 @@
     "mocha": "^7.1.1",
     "push-dir": "^0.4.1",
     "sass-loader": "^10.1.1",
+    "scv-bilara": "^2.1.11",
     "should": "^11.2.0"
   },
   "author": "Karl Lew",
