--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "devDependencies": {
     "@mdi/js": "^5.8.55",
+    "express": "^4.17.1",
     "json": "^10.0.0",
     "memo-again": "^0.3.12",
     "mocha": "^7.1.1",
