--- a/scripts/build
+++ b/scripts/build
@@ -11,6 +11,7 @@ npm install --save-dev scv-bilara@latest; RC=$? || exit $RC
 
 echo "$SCRIPT: updating ebt-vue"
 npm install --save ebt-vue@latest; RC=$? || exit $RC
+cp -v node_modules/ebt-vue/assets/ebt.css assets/ebt.cs
 
 if [ "$1" == "PUSH" ]; then
   echo "$SCRIPT: git commit"
